--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.scj</groupId>
-    <artifactId>SpringYJ</artifactId>
+    <artifactId>FoolRPC</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>SpringYJ</name>
-    <description>SpringYJ</description>
+    <name>FoolRPC</name>
+    <description>FoolRPC</description>
     <properties>
         <java.version>17</java.version>
     </properties>
