--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.scj</groupId>
     <artifactId>foolRpcClient</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.5-SNAPSHOT</version>
     <name>foolRpcClient</name>
     <description>foolRpcClient</description>
     <properties>
@@ -53,12 +53,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <excludes>
-                        <exclude>**/testConsumer/**</exclude>
-                        <exclude>**/FRCApplication.java</exclude>
-                    </excludes>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <excludes>-->
+<!--                        <exclude>**/testConsumer/**</exclude>-->
+<!--                        <exclude>**/FRCApplication.java</exclude>-->
+<!--                    </excludes>-->
+<!--                </configuration>-->
             </plugin>
         </plugins>
         <resources>
